create post related changes and api security related changes
