# routes/api.php
@@ -37,6 +37,8 @@ use Illuminate\Support\Facades\Route;
     Route::post('register', 'Api\V1\AuthController@register');
     Route::post('verifyId/{id}', 'Api\V1\UserController@verifyId');
     Route::post('verifyemail/{id}', 'Api\V1\UserController@verifyemail');
+    Route::post('updateProfile/{id}', 'Api\V1\UserController@updateProfile');
+    Route::post('addPaymentDetails/{id}', 'Api\V1\UserController@addPaymentDetails');
     Route::post('/desirerRegister', 'Api\V1\AuthController@desirerRegister');
 
     Route::post('/forgotPassword', 'Api\V1\PasswordController@forgot');
@@ -48,13 +50,10 @@ use Illuminate\Support\Facades\Route;
           //User related routes
           Route::post('alluser', 'Api\V1\UserController@alluser');
           Route::post('getDetails', 'Api\V1\UserController@getDetails');
-          Route::post('updateProfile/{id}', 'Api\V1\UserController@updateProfile');
           Route::post('deleteUser/{id}', 'Api\V1\UserController@deleteUser');
-          Route::post('addPaymentDetails/{id}', 'Api\V1\UserController@addPaymentDetails');
-          
           Route::post('/changePassword/{id}', 'Api\V1\PasswordController@change');
           //Post related routes
-          Route::post('addPost/{id}', 'Api\V1\PostController@addPost');
+          Route::post('addPost/{userid}', 'Api\V1\PostController@addPost');
       });
 
   });
