# storage/api-docs/api-docs.json
@@ -476,7 +476,7 @@
                 ]
             }
         },
-        "/api/v1/addPost/{id}": {
+        "/api/v1/addPost/{userid}": {
             "post": {
                 "tags": [
                     "Posts"
@@ -486,7 +486,7 @@
                 "operationId": "Add User Post Details",
                 "parameters": [
                     {
-                        "name": "Userid",
+                        "name": "userid",
                         "in": "path",
                         "required": true,
                         "schema": {
@@ -499,8 +499,7 @@
                         "multipart/form-data": {
                             "schema": {
                                 "required": [
-                                    "Comment",
-                                    "ProfileBanner"
+                                    "Comment"
                                 ],
                                 "properties": {
                                     "Comment": {
@@ -637,7 +636,7 @@
         "/api/v1/verifyId/{id}": {
             "post": {
                 "tags": [
-                    "Registration"
+                    "Register"
                 ],
                 "summary": "Update User Ids",
                 "description": "data of users",
@@ -664,10 +663,10 @@
                                         "type": "string"
                                     },
                                     "PhotoId": {
-                                        "type": "file"
+                                        "type": "string"
                                     },
                                     "PhotowithId": {
-                                        "type": "file"
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -700,7 +699,7 @@
         "/api/v1/verifyemail/{id}": {
             "post": {
                 "tags": [
-                    "Registration"
+                    "Register"
                 ],
                 "summary": "Verify User",
                 "description": "data of users",
@@ -740,7 +739,7 @@
         "/api/v1/updateProfile/{id}": {
             "post": {
                 "tags": [
-                    "Users"
+                    "Register"
                 ],
                 "summary": "update users",
                 "description": "data of users",
@@ -765,13 +764,13 @@
                                 ],
                                 "properties": {
                                     "ProfilePic": {
-                                        "type": "file"
+                                        "type": "string"
                                     },
                                     "ProfileVideo": {
-                                        "type": "file"
+                                        "type": "string"
                                     },
                                     "ProfileBanner": {
-                                        "type": "file"
+                                        "type": "string"
                                     },
                                     "Location": {
                                         "type": "string"
@@ -816,12 +815,7 @@
                     "404": {
                         "description": "not found"
                     }
-                },
-                "security": [
-                    {
-                        "passport": []
-                    }
-                ]
+                }
             }
         },
         "/api/v1/deleteUser/{id}": {
@@ -870,9 +864,9 @@
             }
         },
         "/api/v1/getCountries": {
-            "post": {
+            "get": {
                 "tags": [
-                    "Users"
+                    "General"
                 ],
                 "summary": "Get Countries",
                 "description": "name of all countries",
@@ -896,18 +890,13 @@
                     "404": {
                         "description": "not found"
                     }
-                },
-                "security": [
-                    {
-                        "passport": []
-                    }
-                ]
+                }
             }
         },
         "/api/v1/addPaymentDetails/{id}": {
             "post": {
                 "tags": [
-                    "Users"
+                    "Register"
                 ],
                 "summary": "Add User Payment Details",
                 "description": "data of users account",
@@ -964,12 +953,7 @@
                     "404": {
                         "description": "not found"
                     }
-                },
-                "security": [
-                    {
-                        "passport": []
-                    }
-                ]
+                }
             }
         }
     },
